Pipeline: Enabled Parameter for Build and Time